--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -7,11 +7,18 @@
     height: 100vh;
     display: flex;
     justify-content: space-around;
+    margin-top:50px;
+
 }
 
 .product-card{
     width: 20%;
-    height: 320px;
+    height: 400px;
+    padding: 7px 7px 0px 7px;
+    -webkit-box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.56);
+-moz-box-shadow:    2px 2px 5px 0px rgba(50, 50, 50, 0.56);
+box-shadow:         2px 2px 5px 0px rgba(50, 50, 50, 0.56);
+font-family: 'Montserrat', sans-serif;
     
 }
 
@@ -36,4 +43,13 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+}
+
+.product-card .btn-add-to-cart{
+    width: 100%;
+    height: 36px;
+    border-radius: 0%;
+    border: none;
+    background-color: #222831;
+    color: #FFF;
 }
